--- a/style.less
+++ b/style.less
@@ -1,8 +1,65 @@
+body{
+  background-color: antiquewhite;
+  padding: 15px;
+}
 .body{
-  display: grid;
-  grid-template-columns: 100px 100px;
+
+}
+a{
+padding: 5px;
+  background-color: rgb(255, 228, 228);
+  border: solid 3px black;
+  border-radius: 5px;
+  color: black;
+  margin: 15px;
+}
+a:hover{
+  color: rgb(11, 8, 199);
+  border: solid 3px rgb(11, 8, 199);
 }
 .cards{
+  background-color: rgb(255, 228, 228);
   display: inline-block;
   border: solid 3px black;
+  margin: 33px;
+  padding: 10px;
+  position: absolute;
+  border-radius: 5px;
+  p{
+    margin-left: 10px;
+  }
+  div{
+    margin: 8px;
+  }
+  button{
+    background-color: rgb(11, 8, 199);
+    padding: 5.3px;
+    color:rgb(255, 255, 255);
+    border: solid 0px;
+    border-radius: 4px;
+  }
+  button:hover{
+    background-color: rgb(7, 5, 112);
+
+  }
+}
+.cards:nth-child(1){
+  left:3%
+}
+.cards:nth-child(2){
+  left:21%
+}
+.cards:nth-child(3){
+  left:40%
+}
+.cards:nth-child(4){
+  left:59%
+}
+.cards:nth-child(5){
+  left:78%
+}
+
+.cards:hover{
+  margin-top: 29px;
+  box-shadow: 0px 3px 7px 1px rgb(85, 85, 85);
 }
